# AST3

./: .clang-format  .gitignore  AST3.g3a  AST3generator.py  CMakeLists.txt  README.md  build.sh  compile_level.py  compile_levels.py  editor.sh  generate_define.sh  levelname.py  project.cfg  time.py  times.lvl  update_levels.sh
assets-cg/img/: fxconv-metadata.txt
build-cg/: AST3.elf  map
build-cg/src/: drawlevel.c.d  main.c.d  setlevel.c.d
editor/: AST3generator.py  README.md  setlevel.c
editor/levels/: 0.lvl  1.lvl  10.lvl  11.lvl  12.lvl  13.lvl  14.lvl  15.lvl  16.lvl  17.lvl  18.lvl  19.lvl  2.lvl  20.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl
include/: collide.h  define.h  drawlevel.h  friction.h  menu.h  replace.h  save.h  setlevel.h  times.h  util.h
src/: collide.c  draw_time.c  drawlevel.c  friction.c  main.c  menu.c  replace.c  save.c  setlevel.c  times.c  util.c
